# fcs

./: Cargo.toml  LICENSE-3RD-PARTY  LICENSE-MIT  README.md
examples/: csv.rs  metadata.rs  rewrite.rs
src/: data.rs  header.rs  lib.rs  text.rs
